<h3>New in version 2.8.0</h3>
<ul>
    <li>Updates laws to include 2015 legislative session.</li>
</ul>
<div id="update-action">
    <a class="btn btn-default update-dismiss">Dismiss</a> 
</div>