@@ -53,10 +53,12 @@
                     connection.
                     </p>
                     <p>The project is open source and is 
-                    offered free of charge by the <a href="http://loyolalawtech.org" target="_new">Loyola Technology and Legal Innovation Clinic</a>
-                    under the <a href="http://opensource.org/licenses/MIT" target="_new">MIT license</a>.  The source code is available on
-                    <a href="https://github.com/judsonmitchell/LACivBook" target="_new">Github</a>.</p>
+                    offered free of charge by the <a onclick="window.open('https://loyolalawtech.org', '_system');">Loyola Technology and Legal Innovation Clinic</a>
+                    under the <a onclick="window.open('http://opensource.org/licenses/MIT','_system');">MIT license</a>.  The source code is available on
+                    <a onclick="window.open('https://github.com/judsonmitchell/LACivBook','_system');">Github</a>.</p>
                     </p>
+                    <p>Please consider supporting the future development of LACivBook by making a <a onclick="window.open('https://www.paypal.me/judsonmitchell', '_system');">
+                    donation via PayPal.</a> Thanks!</p>
 
                     <p>Project By:</p>
                 </div>
@@ -82,15 +84,16 @@
                     <hr />
                     <dl>
                         <dt>Version</dt>
-                        <dd>2.8.0</dd>
+                        <dd>2.9.0</dd>
                         <dt>Laws Last Updated</td>
-                        <dd>September, 2015</dd>
+                        <dd>August, 2016</dd>
                         <dt>Source</dt>
                         <dd>http://www.legis.state.la.us/</dd>
                     </dl>
                 </div>
             </div>
         </div>
+        <script src="phonegap.js"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.9.0.min.js"><\/script>')</script>
 
